--- a/frontend/report.html
+++ b/frontend/report.html
@@ -296,7 +296,16 @@
                 layout: 'fitDataStretch',
                 columns: [
                     { title: 'Date', field: 'date' },
-                    { title: 'Description', field: 'description', bottomCalc: function() { return 'Total'; } },
+                    { title: 'Description', field: 'description', formatter: function(cell){
+                            const data = cell.getRow().getData();
+                            const value = cell.getValue();
+                            if (!data.id) return value;
+                            const link = document.createElement('a');
+                            link.href = `transaction.html?id=${data.id}`;
+                            link.textContent = value;
+                            link.className = 'text-indigo-600 hover:underline';
+                            return link;
+                        }, bottomCalc: function() { return 'Total'; } },
                     { title: 'Category', field: 'category_name', formatter: badgeFormatter('bg-green-200 text-green-800') },
                     { title: 'Tag', field: 'tag_name', formatter: badgeFormatter('bg-indigo-200 text-indigo-800') },
                     { title: 'Group', field: 'group_name', formatter: badgeFormatter('bg-purple-200 text-purple-800') },
