--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,6 @@
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="any" href="/favicon.png">
     <meta property="og:title" content="Finance Manager">
     <meta property="og:description" content="Manage your finances with budgets, reports and more.">
@@ -24,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
+<body class="bg-gradient-to-b from-indigo-50 to-white">
     <div class="flex flex-col md:flex-row min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
@@ -37,15 +36,15 @@
                             <img src="wallet.svg" alt="Wallet icon" class="absolute inset-0 w-full h-full object-cover transition-all duration-700 opacity-0 translate-x-full">
                         </div>
                         <div class="absolute inset-0 bg-indigo-700/60 flex flex-col items-center justify-center text-center p-6">
-                            <h1 class="font-['Roboto'] text-3xl md:text-4xl font-semibold mb-4 text-white">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
+                            <h1 class="text-3xl md:text-4xl font-semibold mb-4 text-white">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
                             <p class="text-indigo-100 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-                            <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-['Source_Sans_Pro'] font-light">Get Started</a>
+                              <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-light">Get Started</a>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow h-72 md:h-96">
                         <img src="coin_flower.png" alt="Coin plant illustration" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black/40 flex items-center justify-center p-6 text-center">
-                            <p class="text-white text-2xl font-['Roboto']">Track savings effortlessly</p>
+                            <p class="text-white text-2xl">Track savings effortlessly</p>
                         </div>
                     </div>
                 </div>
@@ -70,7 +69,7 @@
 
             <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700" data-no-card="true">
 
-                <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
+                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-file-upload text-indigo-600 fa-2x"></i>
@@ -146,7 +145,7 @@
 
             <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700" data-no-card="true">
 
-                <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">How Data Is Organised</h2>
+                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">How Data Is Organised</h2>
                 <svg role="img" aria-label="Segments link to categories and tags while groups stand alone" class="mx-auto mb-4" width="360" height="120">
                     <defs>
                         <marker id="arrow" markerWidth="10" markerHeight="10" refX="8" refY="5" orient="auto">
@@ -154,15 +153,15 @@
                         </marker>
                     </defs>
                     <rect x="10" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
-                    <text x="60" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Segment</text>
+                    <text x="60" y="45" text-anchor="middle" font-size="14" fill="#1f2937">Segment</text>
                     <rect x="130" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
-                    <text x="180" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Category</text>
+                    <text x="180" y="45" text-anchor="middle" font-size="14" fill="#1f2937">Category</text>
                     <rect x="250" y="20" width="100" height="40" fill="#e0e7ff" stroke="#4338ca"></rect>
-                    <text x="300" y="45" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Tag</text>
+                    <text x="300" y="45" text-anchor="middle" font-size="14" fill="#1f2937">Tag</text>
                     <line x1="110" y1="40" x2="130" y2="40" stroke="#4338ca" stroke-width="2" marker-end="url(#arrow)"></line>
                     <line x1="230" y1="40" x2="250" y2="40" stroke="#4338ca" stroke-width="2" marker-end="url(#arrow)"></line>
                     <rect x="130" y="80" width="100" height="40" fill="#d1fae5" stroke="#047857" stroke-dasharray="4 2"></rect>
-                    <text x="180" y="105" text-anchor="middle" font-family="Roboto" font-size="14" fill="#1f2937">Group</text>
+                    <text x="180" y="105" text-anchor="middle" font-size="14" fill="#1f2937">Group</text>
                 </svg>
                 <p class="text-gray-700">Segments contain categories, and each category holds tags that label your transactions. Groups operate separately from this chain and are perfect for collecting transactions for holidays or projects, letting you see their total cost independently.</p>
             </section>
