--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -11,30 +11,29 @@
         window.tailwind.config = {};
     </script>
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
+      <script src="https://cdn.tailwindcss.com"></script>
+      <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
+<body class="bg-gradient-to-b from-indigo-50 to-white">
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
+        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
         <section class="bg-white p-6 rounded shadow border border-gray-400 space-y-6">
             <div>
-                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Budget Planning</h2>
+                <h2 class="text-xl font-semibold mb-4">Budget Planning</h2>
                 <div class="flex items-end space-x-4">
                     <label class="block">Annual Budget (£)<br><input type="number" id="annual-budget" class="border p-2 rounded" data-help="Total funds available"></label>
-                    <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded font-['Source_Sans_Pro'] font-light"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
+                    <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded font-light"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
                 </div>
             </div>
             <div>
-                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Project Comparison</h2>
+                <h2 class="text-xl font-semibold mb-4">Project Comparison</h2>
                 <div class="flex items-end space-x-4 mb-4">
                     <label class="block">X Axis<br>
                         <select id="x-axis" class="border p-2 rounded" data-help="Field used for horizontal axis">
@@ -64,7 +63,7 @@
                 <div id="project-bubble-chart" style="height:800px" data-chart-desc="Bubble chart plotting chosen fields with bubble size representing score."></div>
             </div>
             <div>
-                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Project Priorities</h2>
+                <h2 class="text-xl font-semibold mb-4">Project Priorities</h2>
                 <div id="projects-table"></div>
             </div>
         </section>
